  [New Features]
    * Add SPVM::Builder::LinkInfo create_link_command instance method.
    * Add SPVM::Builder::LinkInfo output_type field method.
    * Add SPVM::Builder::LinkInfo ld_optimize field method.
    * Add SPVM::Builder::LinkInfo dynamic_lib_ldflags field method.
    * Add SPVM::Builder::LinkInfo create_merged_ldflags method.
    * Add SPVM::Builder::CompileInfo class.
  [Changes]
    * Improve MANIFES.SKIP that is generated by spvmdit.
      [Before]
      ^blib/
      ^Makefile\$
      ^Makefile\.old\$
      ^MYMETA.yml\$
      ^MYMETA.json\$
      ^pm_to_blib\$
      ^\.spvm_build/
      ^t/\.spvm_build/
      ^SPVM-
      ^core\.
      ^core\$
      \.bak\$
      \.tmp\$
      \.BAK\$
      ^\.git/
      
      [After]
      (^|\/)blib/
      (^|\/)Makefile$
      (^|\/)Makefile.old$
      (^|\/)MYMETA.yml$
      (^|\/)MYMETA.json$
      (^|\/)pm_to_blib$
      (^|\/).spvm_build/
      (^|\/)t/.spvm_build/
      (^|\/)SPVM-
      (^|\/)core\.
      (^|\/)core$
      (^|\/)\.git/
      \.bak$
      \.tmp$
      \.BAK$
      \.o$
      \.bs$
  [Imcompative Changes]
    * (This is undocumented feature)The return value of SPVM::LinkInfo to_string
      is changed from the output file to the link command.
    * (This feature is not work well from now)Remove non-worked global_cc_each,
      global_ccflags_each, global_optimize_each from SPVM::Builder::CC.
    * Remove cc_each, ccflags_each, optimize_each.
    * Remove lib_type from SPVM::Builder::ObjectFileInfo.
    * Remove source_type from SPVM::Builder::ObjectFileInfo.
  [Document]
    * Add the document of SPVM::Builder::LinkInfo to_string method.
    * Add the doucment of Error class.
    * Remove non-worked global_cc_each, global_ccflags_each, global_optimize_each doc.
0.9620 2022-07-09
  [New Featres]
    * Add Error class that class id is 1.
    * Add a constant value SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_CLASS in native API.
    * Add a constant value SPVM_NATIVE_C_CLASS_ID_ERROR in native API.