@@ -198,7 +198,7 @@ sub get_dependent_resources {
   my $builder = $self->builder;
 
   my $build_dir = $self->builder->build_dir;
-
+  
   # Compiler for native module
   my $builder_cc_native = SPVM::Builder::CC->new(
     global_before_compile => $config->global_before_compile,
@@ -365,6 +365,7 @@ sub build_exe_file {
 
   # Link and generate executable file
   my $cc_linker = SPVM::Builder::CC->new(
+    global_before_compile => $config->global_before_compile,
     build_dir => $build_dir,
     builder => $builder,
     quiet => $self->quiet,
@@ -437,6 +438,7 @@ sub compile_source_file {
   
   # Compile command
   my $builder_cc = SPVM::Builder::CC->new(
+    global_before_compile => $config->global_before_compile,
     build_dir => $build_dir,
     builder => $builder,
     quiet => $self->quiet,
@@ -451,11 +453,7 @@ sub compile_source_file {
   my $compile_info_cc = $compile_info->{cc};
   my $compile_info_ccflags = $compile_info->{ccflags};
   my $object_file_info = SPVM::Builder::ObjectFileInfo->new(
-    file => $output_file,
-    source_file => $source_file,
-    cc => $compile_info_cc,
-    ccflags => $compile_info_ccflags,
-    config => $config,
+    compile_info => $compile_info,
   );
   
   return $object_file_info;
@@ -944,6 +942,7 @@ sub create_precompile_sources {
 
   # Build precompile classes
   my $builder_cc_precompile = SPVM::Builder::CC->new(
+    global_before_compile => $config->global_before_compile,
     build_dir => $build_dir,
     builder => $builder,
     quiet => $self->quiet,
@@ -981,6 +980,7 @@ sub compile_precompile_sources {
   
   # Build precompile classes
   my $builder_cc_precompile = SPVM::Builder::CC->new(
+    global_before_compile => $config->global_before_compile,
     build_dir => $build_dir,
     builder => $builder,
     quiet => $self->quiet,
@@ -1029,6 +1029,7 @@ sub compile_native_sources {
 
   # Compiler for native module
   my $builder_cc_native = SPVM::Builder::CC->new(
+    global_before_compile => $config->global_before_compile,
     build_dir => $build_dir,
     builder => $builder,
     quiet => $self->quiet,
