@@ -17,4 +17,11 @@ $config->add_source_files(@source_files);
 $config->use_resource('TestCase::Resource::Mylib1::V1_0_0', mode => 'mode1', args => ['args1', 'args2']);
 $config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
 
+$config->before_compile(sub {
+  my ($config, $compile_info) = @_;
+  
+  $main::MYEXE_COMPILE_INFO_BEFORE_COMPILE ||= $compile_info;
+});
+
+
 $config;
