@@ -20,6 +20,13 @@ $config->before_link(sub {
   $main::MYEXE_LINK_INFO = $link_info;
 });
 
+$config->global_before_compile(sub {
+  my ($config, $compile_info) = @_;
+  
+  $main::MYEXE_COMPILE_INFO_GLOBAL_BEFORE_COMPILE ||= $compile_info;
+});
+
+
 $config->use_resource('TestCase::Resource::Mylib1::V1_0_0');
 $config->use_resource('TestCase::Resource::Mylib2::V1_0_0');
 
