@@ -6,6 +6,9 @@
     * Add SPVM::Builder::LinkInfo dynamic_lib_ldflags field method.
     * Add SPVM::Builder::LinkInfo create_merged_ldflags method.
     * Add SPVM::Builder::CompileInfo class.
+    * Add compile_info to SPVM::Builder::ObjectFileInfo.
+    * Add before_compile to SPVM::Builder::Config.
+    * Add global_before_compile to SPVM::Builder::Config::Exe.
   [Changes]
     * Improve MANIFES.SKIP that is generated by spvmdit.
       [Before]
@@ -49,8 +52,7 @@
     * (This feature is not work well from now)Remove non-worked global_cc_each,
       global_ccflags_each, global_optimize_each from SPVM::Builder::CC.
     * Remove cc_each, ccflags_each, optimize_each.
-    * Remove lib_type from SPVM::Builder::ObjectFileInfo.
-    * Remove source_type from SPVM::Builder::ObjectFileInfo.
+    * Remove all field methods from SPVM::Builder::ObjectFileInfo.
   [Document]
     * Add the document of SPVM::Builder::LinkInfo to_string method.
     * Add the doucment of Error class.
